# Aurelia

./: .gitignore  config.example.yaml  pyproject.toml
aurelia/: __init__.py
aurelia/cli/: __init__.py  display.py  interactive.py  main.py  setup_wizard.py
aurelia/core/: __init__.py  model.py
aurelia/ingestion/: __init__.py  parser.py  walker.py
src/core/: config.py  model.py
src/ingestion/: walker.py
tests/: SchemaValidation.py  test_config.py  test_parser.py  test_walker.py
